--- a/1111.html
+++ b/1111.html
@@ -9,7 +9,7 @@
 <!-- Sidebar -->
 <div class="w3-sidebar w3-brown w3-bar-block" style="width:15%">
   <div style="text-align: center;"> <h3 style="text-align: center;" class="w3-bar-item" >Menu</h3></div>
-   <button class="btn first" button onclick="location.href='Proyecto.html'">¿Que es Racismo?</button></button>
+   <button class="btn first" button onclick="location.href='Proyecto.html'">¿Que es Racismo</button></button>
    <button class="btn first" button onclick="location.href='1111.html'">Tipos de Racismo</button></button>
    <button class="btn first" button onclick="location.href='2222.html'">Historia del Rcismo</button></button>
   
